Fixed scrollbar height.

--- a/source/main.scss
+++ b/source/main.scss
@@ -829,6 +829,7 @@ input[type=radio].switch:checked::after {
 
 ::-webkit-scrollbar {
     width: var(--space-small);
+    height: var(--space-small);
 }
 
 ::-webkit-scrollbar-track {
